[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/battle/SkillPanel.gd" type="Script" id=1]
[ext_resource path="res://src/ui/SoundButton.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/ui/icons/actions/attack.png" type="Texture" id=9]
[ext_resource path="res://assets/graphics/ui/icons/actions/cancel.png" type="Texture" id=10]

[node name="SkillPanel" type="Control"]
margin_right = 106.0
margin_bottom = 24.0
rect_min_size = Vector2( 106, 24 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 87.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 21.0
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 81.0
margin_bottom = 17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_vertical = 4
texture = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 18.0
margin_right = 80.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Name" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 62.0
margin_bottom = 7.0
size_flags_horizontal = 3
text = "Test"

[node name="NoValidTargets" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 9.0
margin_right = 62.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "No valid targets"

[node name="Cancel" type="Button" parent="."]
margin_left = 82.0
margin_right = 106.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 8
icon = ExtResource( 10 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
sound_type = 1

[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
